# hello-webserver

./: README.md
crystal/: Dockerfile  app.cr
golang/: Dockerfile  go.mod  main.go
kotlin/: README.md  pom.xml
kotlin/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
kotlin/src/main/kotlin/systems/toni/hello/webserver/: GreetingResource.kt
kotlin/src/test/kotlin/systems/toni/hello/webserver/: GreetingResourceIT.kt  GreetingResourceTest.kt
ruby/: Dockerfile  Gemfile  app.rb  config.ru
rust/: Cargo.toml
rust/src/: main.rs
swift/: Package.swift  docker-compose.yml
swift/Sources/App/: routes.swift
